k8s/networking.yaml
apiVersion: v1
kind: Service
metadata:
  name: jayd-service
spec:
  selector:
    app: jayd
  ports:
    - port: 8000
      targetPort: 8000
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jayd-ingress
  # annotations:
  #   cert-manager.io/cluster-issuer: cluster-issuer-prd
  #   kubernetes.io/ingress.class: traefik
spec:
  # tls:
  #   - secretName: jayd-k8s-axatol-xyz
  #     hosts:
  #       - jayd.k8s.axatol.xyz
  rules:
    - host: jayd.k8s.axatol.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: jayd-service
                port:
                  number: 8000
